fix addons response